--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-lazy-load-image-component": "^1.5.1",
+    "react-loading-skeleton": "^2.2.0",
     "react-particles-js": "^3.5.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
